# Distributed-SIMD-Matrix-Multiplication-Engine

./: .gitignore  README.md  generate.sh  matmul.md
cpp-worker/: .dockerignore  CMakeLists.txt  Dockerfile.cachegrind
cpp-worker/benchmarks/: benchmark_main.cpp
cpp-worker/include/: matrix.hpp
cpp-worker/src/: main.cpp  matrix.cpp  matrix_service.cpp  matrix_service.hpp
cpp-worker/tests/: matrix_tests.cpp
proto/: matrix.proto
